[package]
name = "entropy_coders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"

[dev-dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
criterion = { version = "0.5", features = ["html_reports"] }
criterion-perf-events = "0.4.0"
perfcnt = "0.8.0"

[[bench]]
name = "fse_benchmark"
harness = false